update share box styles

--- a/scss/common.scss
+++ b/scss/common.scss
@@ -19,6 +19,7 @@
 // - Post
 // - Reply
 // - Select2
+// - Share
 // - Timeline
 // - Topic list
 //   - Category list
@@ -39,6 +40,7 @@
 @import 'common/post';
 @import 'common/reply';
 @import 'common/select2';
+@import 'common/share';
 @import 'common/timeline';
 @import 'common/topic-list';
 @import 'common/topic-list-category';
