--- a/common/common.scss
+++ b/common/common.scss
@@ -5050,6 +5050,197 @@ nav.post-controls .actions button .read-icon::before {
   padding-bottom: 18px;
 }
 
+#share-link {
+  background-color: color-chooser(#424242, #ffffff);
+  border: 0;
+  border-radius: 2px;
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.4);
+          box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.4);
+  color: $primary;
+  padding: 0;
+  padding: 16px 16px;
+}
+#share-link[href]:focus, #share-link[href]:hover, #share-link[tabindex]:focus, #share-link[tabindex]:hover {
+  -webkit-box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.4);
+          box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.4);
+  text-decoration: none;
+}
+#share-link[href]:focus, #share-link[tabindex]:focus {
+  outline: 0;
+}
+#share-link h3 {
+  font-size: 20px;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  line-height: 1.4;
+  float: none;
+  margin: 0 32px 16px 0;
+}
+#share-link input[type='text'] {
+  -webkit-background-clip: padding-box;
+          background-clip: padding-box;
+  background-color: transparent;
+  background-image: none;
+  border: 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.42);
+  border-radius: 0;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  color: inherit;
+  display: block;
+  font-size: 16px;
+  height: 36px;
+  line-height: 20px;
+  padding: 8px 0 7px;
+  width: 100%;
+  background-color: color-chooser(rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.06));
+  border-radius: 4px;
+  height: 56px;
+  line-height: 16px;
+  padding: 20px 16px 19px;
+}
+#share-link input[type='text']:focus, #share-link input[type='text']:hover {
+  border-bottom-width: 2px;
+  padding-bottom: 6px;
+}
+#share-link input[type='text']:focus {
+  border-color: $tertiary;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+#share-link input[type='text']:focus, #share-link input[type='text']:hover {
+  padding-bottom: 18px;
+}
+#share-link .link {
+  font-size: inherit;
+  margin: 0;
+  position: absolute;
+  top: 20px;
+  right: 8px;
+}
+#share-link .link a {
+  color: color-chooser(rgba(255, 255, 255, 0.7), rgba(0, 0, 0, 0.54));
+}
+#share-link .link .fa-close {
+  font-family: 'Material Icons';
+  -webkit-font-feature-settings: 'liga';
+          font-feature-settings: 'liga';
+  font-size: 1.714286em;
+  font-style: normal;
+  font-weight: normal;
+  letter-spacing: normal;
+  line-height: 0.583333em;
+  text-rendering: optimizeLegibility;
+  text-transform: none;
+  vertical-align: -0.302198em;
+  white-space: nowrap;
+  word-wrap: normal;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+}
+#share-link .link .fa-close::before {
+  content: 'close';
+}
+#share-link .reply-as-new-topic {
+  float: right;
+  margin-right: -8px;
+}
+#share-link .reply-as-new-topic a {
+  background-color: transparent;
+  background-image: none;
+  border: 0;
+  border-radius: 2px;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  color: $primary;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1;
+  margin: 0;
+  max-width: 100%;
+  padding: 11px 16px;
+  position: relative;
+  text-align: center;
+  text-transform: uppercase;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  padding-right: 8px;
+  padding-left: 8px;
+}
+#share-link .reply-as-new-topic a:focus {
+  background-color: color-chooser(rgba(204, 204, 204, 0.125), rgba(153, 153, 153, 0.2));
+  color: $primary;
+}
+@media (hover: hover) {
+  #share-link .reply-as-new-topic a:hover {
+    background-color: color-chooser(rgba(204, 204, 204, 0.125), rgba(153, 153, 153, 0.2));
+    color: $primary;
+  }
+}
+#share-link .reply-as-new-topic a:active {
+  background-color: color-chooser(rgba(204, 204, 204, 0.25), rgba(153, 153, 153, 0.4));
+}
+#share-link .reply-as-new-topic a:focus {
+  outline: 0;
+}
+#share-link .reply-as-new-topic a[disabled], #share-link .reply-as-new-topic a.disabled {
+  color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+}
+#share-link .reply-as-new-topic a[disabled]:focus, #share-link .reply-as-new-topic a.disabled:focus {
+  background-color: transparent;
+  color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+}
+@media (hover: hover) {
+  #share-link .reply-as-new-topic a[disabled]:hover, #share-link .reply-as-new-topic a.disabled:hover {
+    background-color: transparent;
+    color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+  }
+}
+#share-link .reply-as-new-topic a[disabled]:active, #share-link .reply-as-new-topic a.disabled:active {
+  background-color: transparent;
+}
+#share-link .reply-as-new-topic a.btn-danger {
+  color: $danger;
+}
+#share-link .reply-as-new-topic a.btn-danger:focus {
+  color: $danger;
+}
+@media (hover: hover) {
+  #share-link .reply-as-new-topic a.btn-danger:hover {
+    color: $danger;
+  }
+}
+#share-link .reply-as-new-topic a.btn-primary {
+  color: $tertiary;
+}
+#share-link .reply-as-new-topic a.btn-primary:focus {
+  color: $tertiary;
+}
+@media (hover: hover) {
+  #share-link .reply-as-new-topic a.btn-primary:hover {
+    color: $tertiary;
+  }
+}
+#share-link .social-link {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 24px;
+  height: 36px;
+  margin-right: 8px;
+  margin-left: 0;
+}
+
 .timeline-container .topic-timeline div > button.btn,
 .timeline-container .topic-timeline span > button.btn {
   background-color: transparent;
