--- a/scss/common/_cooked-aside.scss
+++ b/scss/common/_cooked-aside.scss
@@ -58,25 +58,12 @@ aside {
       .back,
       .quote-other-topic {
         &::before {
-          @include material-icons;
+          @extend %material-icons;
 
           color: color-chooser($white-secondary, $black-secondary);
           content: 'arrow_upward';
           margin-left: $card-inner-spacer-x;
         }
-      }
-
-      .fa-chevron-down,
-      .fa-chevron-up {
-        @include material-icons;
-      }
-
-      .fa-chevron-down::before {
-        content: 'expand_more';
-      }
-
-      .fa-chevron-up::before {
-        content: 'expand_less';
       }
     }
 
@@ -131,39 +118,12 @@ div {
     }
 
     .fa {
-      @include material-icons;
-      
       margin-right: $card-inner-spacer-x;
     }
 
-    .fa-check-square-o::before {
+    .fa-check-square-o,
+    .fa-dot-circle-o {
       color: unquote('$tertiary');
-      content: 'check_box';
-    }
-
-    .fa-circle-o::before {
-      content: 'radio_button_unchecked';
-    }
-
-    .fa-dot-circle-o::before {
-      color: unquote('$tertiary');
-      content: 'radio_button_checked';
-    }
-
-    .fa-eye::before {
-      content: 'visibility';
-    }
-
-    .fa-eye-slash::before {
-      content: 'visibility_off';
-    }
-
-    .fa-lock::before {
-      content: 'lock';
-    }
-
-    .fa-square-o::before {
-      content: 'check_box_outline_blank';
     }
 
     .poll-buttons {
