--- a/scss/mixins/_material-icons.scss
+++ b/scss/mixins/_material-icons.scss
@@ -1,4 +1,20 @@
-@mixin material-icons {
+// The below value is calculated using the technique illustrated in:
+// https://iamvdo.me/en/blog/css-font-metrics-line-height-and-vertical-align
+// Font metrics used in the calculation are from Roboro Regular:
+// https://github.com/google/fonts/blob/master/apache/roboto/Roboto-Regular.ttf
+
+$roboto-fm-ascender:        1946 !default;
+$roboto-fm-capital-height:  1456 !default;
+$roboto-fm-descender:       512 !default;
+
+$roboto-capital-height:     ($font-size-base / 1px * $line-height-base) !default;
+$roboto-computed-font-size: ($roboto-capital-height / $roboto-fm-capital-height) !default;
+$roboto-distance-bottom:    $roboto-fm-descender !default;
+$roboto-distance-top:       ($roboto-fm-ascender - $roboto-fm-capital-height) !default;
+
+
+
+%material-icons {
   font-family: 'Material Icons';
   font-feature-settings: 'liga';
   font-size: ($material-icon-size / $font-size-base * 1em);
@@ -9,24 +25,21 @@
   text-rendering: optimizeLegibility;
   text-transform: none;
 
-  // The below value is calculated using the technique illustrated in:
-  // https://iamvdo.me/en/blog/css-font-metrics-line-height-and-vertical-align
-  // Font metrics used in the calculation are from Roboro Regular:
-  // https://github.com/google/fonts/blob/master/apache/roboto/Roboto-Regular.ttf
-
-  $roboto-fm-ascender:        1946 !default;
-  $roboto-fm-capital-height:  1456 !default;
-  $roboto-fm-descender:       512 !default;
-
-  $roboto-capital-height:     (strip-unit($font-size-base) * strip-unit($line-height-base)) !default;
-  $roboto-computed-font-size: ($roboto-capital-height / $roboto-fm-capital-height) !default;
-  $roboto-distance-bottom:    $roboto-fm-descender !default;
-  $roboto-distance-top:       ($roboto-fm-ascender - $roboto-fm-capital-height) !default;
-
   vertical-align: (($roboto-distance-bottom - $roboto-distance-top) * $roboto-computed-font-size * -1em);
 
   white-space: nowrap;
   word-wrap: normal;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
+}
+
+@mixin material-icons($content) {
+  font-size: inherit !important;
+  line-height: inherit !important;
+
+  &::before {
+    @extend %material-icons;
+
+    content: $content;
+  }
 }
