--- a/common/common.scss
+++ b/common/common.scss
@@ -2517,6 +2517,12 @@ nav.post-controls .actions button .read-icon::before {
 .small-action[href]:focus, .small-action[tabindex]:focus {
   outline: 0;
 }
+.small-action.time-gap {
+  background-color: transparent;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  padding: 8px 0 0;
+}
 .small-action button {
   background-color: transparent;
   background-image: none;
@@ -2629,6 +2635,10 @@ nav.post-controls .actions button .read-icon::before {
   margin-top: 0;
   padding: 0 0 0 16px;
   text-transform: none;
+}
+.small-action .small-action-desc.timegap {
+  display: block;
+  color: color-chooser(rgba(255, 255, 255, 0.7), rgba(0, 0, 0, 0.54));
 }
 .small-action .small-action-desc > p {
   margin-right: auto;
