--- a/common/common.scss
+++ b/common/common.scss
@@ -2321,6 +2321,20 @@ div.menu-links-header .menu-links-row {
   outline: 0;
 }
 
+nav.post-controls {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+nav.post-controls button:active {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
 nav.post-controls .actions {
   -webkit-box-align: center;
   -webkit-align-items: center;
@@ -2452,6 +2466,123 @@ nav.post-controls .actions button.like.d-hover {
 }
 nav.post-controls .actions button .read-icon::before {
   content: 'bookmark';
+}
+nav.post-controls .show-replies {
+  background-color: transparent;
+  background-image: none;
+  border: 0;
+  border-radius: 2px;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  color: $primary;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1;
+  margin: 0;
+  max-width: 100%;
+  padding: 11px 16px;
+  position: relative;
+  text-align: center;
+  text-transform: uppercase;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  margin: 8px 16px 8px -8px;
+  padding-right: 8px;
+  padding-left: 8px;
+}
+nav.post-controls .show-replies:focus {
+  background-color: color-chooser(rgba(204, 204, 204, 0.125), rgba(153, 153, 153, 0.2));
+  color: $primary;
+}
+@media (hover: hover) {
+  nav.post-controls .show-replies:hover {
+    background-color: color-chooser(rgba(204, 204, 204, 0.125), rgba(153, 153, 153, 0.2));
+    color: $primary;
+  }
+}
+nav.post-controls .show-replies:active {
+  background-color: color-chooser(rgba(204, 204, 204, 0.25), rgba(153, 153, 153, 0.4));
+}
+nav.post-controls .show-replies:focus {
+  outline: 0;
+}
+nav.post-controls .show-replies[disabled], nav.post-controls .show-replies.disabled {
+  color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+}
+nav.post-controls .show-replies[disabled]:focus, nav.post-controls .show-replies.disabled:focus {
+  background-color: transparent;
+  color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+}
+@media (hover: hover) {
+  nav.post-controls .show-replies[disabled]:hover, nav.post-controls .show-replies.disabled:hover {
+    background-color: transparent;
+    color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+  }
+}
+nav.post-controls .show-replies[disabled]:active, nav.post-controls .show-replies.disabled:active {
+  background-color: transparent;
+}
+nav.post-controls .show-replies.btn-danger {
+  color: $danger;
+}
+nav.post-controls .show-replies.btn-danger:focus {
+  color: $danger;
+}
+@media (hover: hover) {
+  nav.post-controls .show-replies.btn-danger:hover {
+    color: $danger;
+  }
+}
+nav.post-controls .show-replies.btn-primary {
+  color: $tertiary;
+}
+nav.post-controls .show-replies.btn-primary:focus {
+  color: $tertiary;
+}
+@media (hover: hover) {
+  nav.post-controls .show-replies.btn-primary:hover {
+    color: $tertiary;
+  }
+}
+nav.post-controls .show-replies i {
+  margin-left: 4px;
+}
+
+.embedded-posts {
+  margin-right: -16px;
+  margin-left: -16px;
+  position: relative;
+}
+.topic-body .regular > .embedded-posts.bottom {
+  margin-bottom: 52px;
+}
+.embedded-posts.bottom .row {
+  padding-top: 0;
+}
+.embedded-posts .cooked {
+  margin-top: 16px;
+}
+.embedded-posts .topic-avatar {
+  padding: 0;
+}
+.embedded-posts .topic-body {
+  padding: 16px 16px;
+  background-color: color-chooser(#303030, #fafafa);
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  margin-bottom: 0;
+  width: auto;
+}
+.embedded-posts .topic-meta-data {
+  min-height: 36px;
+  padding-top: 0;
+  padding-right: 0;
+  padding-left: 52px;
 }
 
 .gap {
