--- a/scss/common/_post.scss
+++ b/scss/common/_post.scss
@@ -1,5 +1,14 @@
 nav {
   &.post-controls {
+    align-items: center;
+    display: flex;
+
+    button {
+      &:active {
+        box-shadow: none;
+      }
+    }
+
     .actions {
       align-items: center;
       display: flex;
@@ -55,6 +64,58 @@ nav {
         }
       }
     }
+
+    .show-replies {
+      @include btn-flat;
+      
+      margin: ($card-padding-y / 2) ($card-inner-spacer-x * 2) ($card-padding-y / 2) ($card-inner-spacer-x * -1);
+      padding-right: $card-inner-spacer-x;
+      padding-left: $card-inner-spacer-x;
+
+      i {
+        margin-left: $spacer-xs;
+      }
+    }
+  }
+}
+
+.embedded-posts {
+  margin-right: ($card-padding-x * -1);
+  margin-left: ($card-padding-x * -1);
+  position: relative;
+
+  &.bottom {
+    .topic-body .regular > & {
+      margin-bottom: ($btn-height + $card-inner-spacer-y);
+    }
+
+    .row {
+      padding-top: 0;
+    }
+  }
+
+  .cooked {
+    margin-top: $card-inner-spacer-y;
+  }
+
+  .topic-avatar {
+    padding: 0;
+  }
+
+  .topic-body {
+    @include card-block;
+
+    background-color: color-chooser($dark-3, $light-3);
+    box-shadow: none;
+    margin-bottom: 0;
+    width: auto;
+  }
+
+  .topic-meta-data {
+    min-height: $card-avatar-size;
+    padding-top: 0;
+    padding-right: 0;
+    padding-left: ($card-avatar-size + $card-inner-spacer-y);
   }
 }
 
@@ -467,7 +528,7 @@ nav {
   min-height: ($card-avatar-size + $card-padding-y);
   padding-right: ($card-padding-y / 2);
   padding-bottom: 0;
-  padding-left: ($card-avatar-size + $card-padding-y * 2);
+  padding-left: ($card-avatar-size + $card-inner-spacer-y + $card-padding-y);
 
   .names {
     float: none;
