--- a/scss/common/_cooked-aside.scss
+++ b/scss/common/_cooked-aside.scss
@@ -92,6 +92,31 @@ div {
     margin: 0 ($card-padding-x * -1) $card-inner-spacer-y;
     width: calc(100% + #{$card-padding-x * 2});
 
+    .d-editor-preview &,
+    .expanded-quote & {
+      border: 1px solid color-chooser($table-border-color-dark, $table-border-color-light);
+
+      &[data-poll-type='multiple'] {
+        li[data-poll-option-id]::before {
+          @extend %material-icons;
+
+          content: 'check_box_outline_blank';
+        }
+      }
+
+      li[data-poll-option-id]::before {
+        @extend %material-icons;
+
+        content: 'radio_button_unchecked';
+      }
+    }
+
+    .d-editor-preview & {
+      margin-right: 0;
+      margin-left: 0;
+      width: 100%;
+    }
+
     li {
       font-size: inherit;
       margin-bottom: $card-inner-spacer-y;
@@ -110,32 +135,30 @@ div {
       }
     }
 
-    .btn {
-      @include btn-flat;
-
-      padding-right: $card-inner-spacer-x;
-      padding-left: $card-inner-spacer-x;
-    }
-
-    .fa {
-      margin-right: $card-inner-spacer-x;
-    }
-
-    .fa-check-square-o,
-    .fa-dot-circle-o {
-      color: unquote('$tertiary');
-    }
-
     .poll-buttons {
       border-top-color: color-chooser($table-border-color-dark, $table-border-color-light);
       padding: ($card-padding-y / 2) ($card-padding-x - $card-inner-spacer-x);
 
+      a,
       .btn {
+        @include btn-flat;
+
         margin-left: $card-inner-spacer-x;
+        padding-right: $card-inner-spacer-x;
+        padding-left: $card-inner-spacer-x;
 
         &:first-child {
           margin-left: 0;
         }
+      }
+
+      .fa {
+        margin-right: $card-inner-spacer-x;
+      }
+
+      .fa-check-square-o,
+      .fa-dot-circle-o {
+        color: unquote('$tertiary');
       }
     }
 
