change fa-wrench to md settings

--- a/common/common.scss
+++ b/common/common.scss
@@ -2047,7 +2047,7 @@ ol.category-breadcrumb li + li {
   line-height: inherit !important;
 }
 .fa-wrench::before {
-  content: "build";
+  content: "settings";
 }
 
 div.menu-links-header {
